--- a/CMFTAspNet/Pages/Shared/_Layout.cshtml
+++ b/CMFTAspNet/Pages/Shared/_Layout.cshtml
@@ -39,22 +39,22 @@
                     </ul>
                     
                     <div class="d-flex gap-5">
-                        <a href="https://www.google.com" target="_blank" title="Help">
+                        <a href="https://www.google.com" target="_blank" title="Help" rel="noopener">
                             <i class="fa-solid fa-info fa-lg" style="color: rgba(48, 87, 78, 1)"></i>
                         </a>
-                        <a href="https://github.com/LetPeopleWork/CMFT/issues" target="_blank" title="Raise an Issue on GitHub">
+                        <a href="https://github.com/LetPeopleWork/CMFT/issues" target="_blank" title="Raise an Issue on GitHub" rel="noopener">
                             <i class="fa-solid fa-bug fa-lg" style="color: rgba(48, 87, 78, 1)"></i>
                         </a>
 
-                        <a href="https://www.youtube.com/channel/UCipDDn2dpVE3rpoKNW2asZQ" target="_blank" title="Let People Work Youtube Channel">
+                        <a href="https://www.youtube.com/channel/UCipDDn2dpVE3rpoKNW2asZQ" target="_blank" title="Let People Work Youtube Channel" rel="noopener">
                             <i class="fab fa-youtube fa-lg" style="color: rgba(48, 87, 78, 1)"></i>
                         </a>
 
-                        <a href="https://www.letpeople.work/blog" target="_blank" title="Let People Work Blog">
+                        <a href="https://www.letpeople.work/blog" target="_blank" title="Let People Work Blog" rel="noopener">
                             <i class="fa-solid fa-square-rss fa-lg" style="color: rgba(48, 87, 78, 1)"></i>
                         </a>
 
-                        <a href="https://github.com/LetPeopleWork/" target="_blank" title="All Tools on GitHub">
+                        <a href="https://github.com/LetPeopleWork/" target="_blank" title="All Tools on GitHub" rel="noopener">
                             <i class="fab fa-github fa-lg" style="color: rgba(48, 87, 78, 1)"></i>
                         </a>
                     </div>
