--- a/CMFTAspNet/Pages/Teams/Details.cshtml
+++ b/CMFTAspNet/Pages/Teams/Details.cshtml
@@ -97,6 +97,7 @@
             {
                 <h7>When will @Model.WhenForecast.NumberOfItems items be done?</h7>
                 <table class="table">
+                    <caption>When Forecast</caption>
                     <thead>
                         <tr>
                             <th>50% Probability</th>
