Add Service to update Projects

--- a/CMFTAspNet/Pages/Projects/Details.cshtml
+++ b/CMFTAspNet/Pages/Projects/Details.cshtml
@@ -9,6 +9,7 @@
 
 <div id="featuresTable">
     <h4>Target Date: @Model.Entity.TargetDate?.ToString("d")</h4>
+    <h4>Last Updated on: @Model.Entity.ProjectUpdateTime.ToString("d")</h4>
     <table class="table">
         <caption>Forecasts</caption>
         <thead>
