Make sure deletion of teams and projects works

--- a/CMFTAspNet/Pages/Projects/Delete.cshtml
+++ b/CMFTAspNet/Pages/Projects/Delete.cshtml
@@ -5,51 +5,12 @@
     ViewData["Title"] = "Delete Project";
 }
 
-<h1>Delete Project</h1>
+<h1>Delete Project @Model.Entity.Name</h1>
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Project</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Entity.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Entity.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Entity.SearchBy)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Entity.SearchBy)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Entity.WorkItemTypes)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Entity.WorkItemTypes)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Entity.SearchTerm)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Entity.SearchTerm)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Entity.TargetDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Entity.TargetDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Entity.IncludeUnparentedItems)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Entity.IncludeUnparentedItems)
-        </dd>
-    </dl>
+<p>Deleting this will remove all Features and forecast associated with this Project.</p>
     
+<div>
     <form method="post">
         <input type="hidden" asp-for="Entity.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
