--- a/CMFTAspNet/Pages/Teams/Details.cshtml
+++ b/CMFTAspNet/Pages/Teams/Details.cshtml
@@ -173,7 +173,7 @@
     <canvas id="throughputRunChart" width="400" height="150"></canvas>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Entity.Id">Edit</a> |
+    <a asp-page="./Create" asp-route-id="@Model.Entity.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
 
