--- a/CMFTAspNet/Pages/Teams/Delete.cshtml
+++ b/CMFTAspNet/Pages/Teams/Delete.cshtml
@@ -5,33 +5,12 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete Team @Model.Entity.Name</h1>
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Team</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            Id:
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Entity.Id)
-        </dd>
-        <dt class="col-sm-2">
-            Name:
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Entity.Name)
-        </dd>
-        <dt class="col-sm-2">
-            ProjectName:
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Entity.ProjectName)
-        </dd>
-    </dl>
+<p>Deleting this team will remove it from any Project they might have been contributing to.</p>
 
+<div>
     <form method="post">
         <input type="hidden" asp-for="Entity.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
